--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>New Loop Tap</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">
+    <h1>New Loop Tap</h1>
+    <div id="game-container"></div>
+    <button id="start-btn">Start Game</button>
+  </div>
   <script type="module" src="/main.js"></script>
 </body>
 </html>
