--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-  <div id="app">
-    <h1>New Loop Tap</h1>
-    <div id="game-container"></div>
-    <button id="start-btn">Start Game</button>
-  </div>
+  <div id="canvas"></div>
   <script type="module" src="/main.js"></script>
 </body>
 </html>
